--- a/convolutional-neural-networks/cifar-cnn/cifar10_cnn_augmentation.ipynb
+++ b/convolutional-neural-networks/cifar-cnn/cifar10_cnn_augmentation.ipynb
@@ -257,29 +257,29 @@
   {
    "cell_type": "markdown",
    "source": [
-    "---\n",
-    "## Define the Network [Architecture](http://pytorch.org/docs/stable/nn.html)\n",
-    "\n",
-    "This time, you'll define a CNN architecture. Instead of an MLP, which used linear, fully-connected layers, you'll use the following:\n",
-    "* [Convolutional layers](https://pytorch.org/docs/stable/nn.html#conv2d), which can be thought of as stack of filtered images.\n",
-    "* [Maxpooling layers](https://pytorch.org/docs/stable/nn.html#maxpool2d), which reduce the x-y size of an input, keeping only the most _active_ pixels from the previous layer.\n",
-    "* The usual Linear + Dropout layers to avoid overfitting and produce a 10-dim output.\n",
-    "\n",
-    "A network with 2 convolutional layers is shown in the image below and in the code, and you've been given starter code with one convolutional and one maxpooling layer.\n",
-    "\n",
-    "<img src='notebook_ims/2_layer_conv.png' height=50% width=50% />\n",
-    "\n",
-    "#### TODO: Define a model with multiple convolutional layers, and define the feedforward metwork behavior.\n",
-    "\n",
-    "The more convolutional layers you include, the more complex patterns in color and shape a model can detect. It's suggested that your final model include 2 or 3 convolutional layers as well as linear layers + dropout in between to avoid overfitting. \n",
-    "\n",
-    "It's good practice to look at existing research and implementations of related models as a starting point for defining your own models. You may find it useful to look at [this PyTorch classification example](https://github.com/pytorch/tutorials/blob/master/beginner_source/blitz/cifar10_tutorial.py) or [this, more complex Keras example](https://github.com/keras-team/keras/blob/master/examples/cifar10_cnn.py) to help decide on a final structure.\n",
-    "\n",
-    "#### Output volume for a convolutional layer\n",
-    "\n",
-    "To compute the output size of a given convolutional layer we can perform the following calculation (taken from [Stanford's cs231n course](http://cs231n.github.io/convolutional-networks/#layers)):\n",
-    "> We can compute the spatial size of the output volume as a function of the input volume size (W), the kernel/filter size (F), the stride with which they are applied (S), and the amount of zero padding used (P) on the border. The correct formula for calculating how many neurons define the output_W is given by `(W−F+2P)/S+1`. \n",
-    "\n",
+    "---\r\n",
+    "## Define the Network [Architecture](http://pytorch.org/docs/stable/nn.html)\r\n",
+    "\r\n",
+    "This time, you'll define a CNN architecture. Instead of an MLP, which used linear, fully-connected layers, you'll use the following:\r\n",
+    "* [Convolutional layers](https://pytorch.org/docs/stable/nn.html#conv2d), which can be thought of as stack of filtered images.\r\n",
+    "* [Maxpooling layers](https://pytorch.org/docs/stable/nn.html#maxpool2d), which reduce the x-y size of an input, keeping only the most _active_ pixels from the previous layer.\r\n",
+    "* The usual Linear + Dropout layers to avoid overfitting and produce a 10-dim output.\r\n",
+    "\r\n",
+    "A network with 2 convolutional layers is shown in the image below and in the code, and you've been given starter code with one convolutional and one maxpooling layer.\r\n",
+    "\r\n",
+    "<img src='notebook_ims/2_layer_conv.png' height=50% width=50% />\r\n",
+    "\r\n",
+    "#### TODO: Define a model with multiple convolutional layers, and define the feedforward metwork behavior.\r\n",
+    "\r\n",
+    "The more convolutional layers you include, the more complex patterns in color and shape a model can detect. It's suggested that your final model include 2 or 3 convolutional layers as well as linear layers + dropout in between to avoid overfitting. \r\n",
+    "\r\n",
+    "It's good practice to look at existing research and implementations of related models as a starting point for defining your own models. You may find it useful to look at [this PyTorch classification example](https://github.com/pytorch/tutorials/blob/master/beginner_source/blitz/cifar10_tutorial.py) or [this, more complex Keras example](https://github.com/keras-team/keras/blob/master/examples/cifar10_cnn.py) to help decide on a final structure.\r\n",
+    "\r\n",
+    "#### Output volume for a convolutional layer\r\n",
+    "\r\n",
+    "To compute the output size of a given convolutional layer we can perform the following calculation (taken from [Stanford's cs231n course](http://cs231n.github.io/convolutional-networks/#layers)):\r\n",
+    "> We can compute the spatial size of the output volume as a function of the input volume size (W), the kernel/filter size (F), the stride with which they are applied (S), and the amount of zero padding used (P) on the border. The correct formula for calculating how many neurons define the output_W is given by `(W−F+2P)/S+1`. \r\n",
+    "\r\n",
     "For example for a 7x7 input and a 3x3 filter with stride 1 and pad 0 we would get a 5x5 output. With stride 2 we would get a 3x3 output."
    ],
    "metadata": {}
